--- a/MultiLevelEvacuation/data/config1.conf
+++ b/MultiLevelEvacuation/data/config1.conf
@@ -3,15 +3,17 @@ agents_per_floor = 100
 
 meter_per_pixel = 0.1
 
+cooperation_prob = 0.8
+
 save_frames = 1
 frame_basename = config1_frame
 
 floor_count = 2
-floor_1_build = config1_1_build.png
-floor_2_build = config1_2_build.png
+floor_1_build = config1_1_build_yellow.png
+floor_2_build = config1_2_build_yellow.png
 
 dt = 0.04
-duration = 0.5
+duration = 180
 
 tau = 0.5
 A = 2e3
@@ -25,3 +27,4 @@ v0 = 0.8
 v_max = 10
 m = 80
 
+plotting_freq = 100
