--- a/MultiLevelEvacuation/data/config1.conf
+++ b/MultiLevelEvacuation/data/config1.conf
@@ -8,9 +8,8 @@ cooperation_prob = 0.8
 save_frames = 1
 frame_basename = config1_frame
 
-floor_count = 2
-floor_1_build = config1_1_build_yellow.png
-floor_2_build = config1_2_build_yellow.png
+floor_count = 1
+floor_1_build = GESS_pillar.png
 
 dt = 0.04
 duration = 180
