--- a/MultiLevelEvacuation/data/config1.conf
+++ b/MultiLevelEvacuation/data/config1.conf
@@ -3,13 +3,13 @@ agents_per_floor = 100
 
 meter_per_pixel = 0.1
 
-cooperation_prob = 0.8
+cooperation_prob = 1.0
 
 save_frames = 1
 frame_basename = config1_frame
 
 floor_count = 1
-floor_1_build = GESS_pillar.png
+floor_1_build = Behav_Room_3.png
 
 dt = 0.04
 duration = 180
