--- a/MultiLevelEvacuation/data/config1.conf
+++ b/MultiLevelEvacuation/data/config1.conf
@@ -9,7 +9,7 @@ save_frames = 1
 frame_basename = config1_frame
 
 floor_count = 1
-floor_1_build = Behav_Room_7.png
+floor_1_build = Room_Funnel_Alternating.png
 
 dt = 0.04
 duration = 180
@@ -26,4 +26,4 @@ v0 = 0.8
 v_max = 10
 m = 80
 
-plotting_freq = 100
+plotting_freq = 1000
